--- a/music.html
+++ b/music.html
@@ -87,6 +87,7 @@
                       <li><a href="#start"><font size="5">My Start</font></a></li>
                       <li><a href="#school"><font size="5">High School</font></a></li>
                       <li><a href="#UMMB"><font size="5">UMMB</font></a></li>
+                      <li><a href="#beyond"><font size="5">Beyond School</font></a></li>
                     </ul>
                     
                 </nav>
@@ -154,7 +155,38 @@
                          performed at the Macy's Thanksgiving Day parade, Gillette stadium, Beaver Stadium at Penn State, and
                          Allentown Pennsylvania. My trumpet skills have increased tremendously and I have become a much
                          better musician overall. I also met my girl friend in the Band. We were both on the Administrative staff 
-                         and the rest was history. My role on the Administrative staff </p>
+                         and the rest was history. My title on the Administrative staff was web staff. I help manage the bands web
+                         site making sure content is up to date and updating views associated with it. Feel free to click
+                         on the UMMB logo to check out our website. </p>
+                    </div>
+                    
+                    <hr style="background-color:black; height:2px;">
+                    <div id="beyond">
+                        <h2 style="color:black;"><b>Beyond School</b></h2>
+                        <br> 
+                        <div class="row">
+                            <div class="col-sm-4">
+                             <img src="images/piano.jpg" class="img-responsive" width="100">
+                            </div>
+                            <div class="col-sm-4">
+                             <img src="images/guitar.png" class="img-responsive" width="100">
+                            </div>
+                            <div class="col-sm-4">
+                             <img src="images/violin.jpg" class="img-responsive" width="100">
+                            </div>
+                        </div>
+                        <br>      
+                         <p style="line-height: 1.8;"> Aside from the trumpet I have also wanted to learn the above instruments.
+                         I own a keyboard and an electric guitar and in my spare time have been trying to learn how to play each one.
+                         I sadly don't own a violin but I love the sound of it and one day hope to learn it as well. I'm still a 
+                         beginner with the guitar and piano so don't ask me to play at your wedding quite yet.</p>
+                         <br>
+                         <p style="line-height: 1.8;">Other than the UMMB I also have been a part of numerous other programs and
+                         bands. I attended a summer music program at UMass Lowel for a week, I made districts twice, and have
+                         been a part of the John Phillip Sousa band twice. This year will be the first time I have been part of the
+                         UMass Hoop band which is a pep band that plays at the Basketball and Hockey games. I'm always looking
+                         for new ways to better myself in the field of music and I want to keep becoming a better trumpet player 
+                         every single day. </p>
                     </div>
                   </div>
                 </div>
