--- a/music.html
+++ b/music.html
@@ -166,13 +166,13 @@
                         <br> 
                         <div class="row">
                             <div class="col-sm-4">
-                             <img src="images/piano.jpg" class="img-responsive" width="100">
+                             <img src="images/piano.png" class="img-responsive" width="100">
                             </div>
                             <div class="col-sm-4">
                              <img src="images/guitar.png" class="img-responsive" width="100">
                             </div>
                             <div class="col-sm-4">
-                             <img src="images/violin.jpg" class="img-responsive" width="100">
+                             <img src="images/violin.png" class="img-responsive" width="100">
                             </div>
                         </div>
                         <br>      
