--- a/music.html
+++ b/music.html
@@ -164,17 +164,26 @@
                     <div id="beyond">
                         <h2 style="color:black;"><b>Beyond School</b></h2>
                         <br> 
-                        <div class="row">
+                        <center>
+                            <img src="images/allinstruments.png" class="img-responsive" width="350">
+                        </center>  
+                        <!--<div class="row">
                             <div class="col-sm-4">
-                             <img src="images/piano.png" class="img-responsive" width="100">
+                                <center>
+                                    <img src="images/piano.png" class="img-responsive" width="100">
+                                </center>    
                             </div>
-                            <div class="col-sm-4">
-                             <img src="images/guitar.png" class="img-responsive" width="100">
+                            <div class="col-sm-5">
+                                <center>
+                                    <img src="images/guitar.png" class="img-responsive" width="100">
+                                </center>    
                             </div>
-                            <div class="col-sm-4">
-                             <img src="images/violin.png" class="img-responsive" width="100">
+                            <div class="col-sm-3">
+                                <center>
+                                    <img src="images/violin.png" class="img-responsive" width="100">
+                                </center>    
                             </div>
-                        </div>
+                        </div>-->
                         <br>      
                          <p style="line-height: 1.8;"> Aside from the trumpet I have also wanted to learn the above instruments.
                          I own a keyboard and an electric guitar and in my spare time have been trying to learn how to play each one.
