--- a/music.html
+++ b/music.html
@@ -165,7 +165,7 @@
                         <h2 style="color:black;"><b>Beyond School</b></h2>
                         <br> 
                         <center>
-                            <img src="images/allinstruments.png" class="img-responsive" width="350">
+                            <img src="images/allinstruments.png" class="img-responsive" width="100%">
                         </center>  
                         <!--<div class="row">
                             <div class="col-sm-4">
@@ -195,7 +195,11 @@
                          been a part of the John Phillip Sousa band twice. This year will be the first time I have been part of the
                          UMass Hoop band which is a pep band that plays at the Basketball and Hockey games. I'm always looking
                          for new ways to better myself in the field of music and I want to keep becoming a better trumpet player 
-                         every single day. </p>
+                         every single day. I love the trumpet and I'm going to play it for the rest of my life. </p>
+                         <center>
+                            <img src="images/trumpet.jpg" class="img-responsive" width="400">
+                        </center> 
+                         <br>
                     </div>
                   </div>
                 </div>
