--- a/FIRST.html
+++ b/FIRST.html
@@ -66,6 +66,7 @@
                       <li><a href="Interests.html">Interests</a></li> 
                       <li><a href="Current_Work.html">Current Work</a></li> 
                       <li class="active"><a href="FIRST.html">FIRST</a></li> 
+                      <li><a href="music.html">Music</a></li> 
                     </ul>
                   </div>    
                 </div>
