--- a/Projects.html
+++ b/Projects.html
@@ -54,6 +54,7 @@
                           <li><a href="Interests.html">Interests</a></li> 
                           <li><a href="Current_Work.html">Current Work</a></li> 
                           <li><a href="FIRST.html">FIRST</a></li> 
+                          <li><a href="music.html">Music</a></li> 
                         </ul>
                       </div>    
                    </div>
