--- a/index.html
+++ b/index.html
@@ -96,22 +96,24 @@
                   <br>
                   <p style="line-height: 1.8;"> I'm currently a student at the University of Massachusetts Amherst. I am studying Computer Science and 
                      Computational Mathematics. Outside of class I'm a member of the University of Massachusetts Minuteman Marching Band and I play the trumpet. I have been playing
-                     the trumpet for about a decade and I am trying to learn how to play the guitar. I'm also part of the bands
-                     Administrative staff, I help manage the bands website which you can check out <a href="http://www.umass.edu/band/">
-                      here</a>. Feel free to click on the image in the navigation bar to check out my facebook page. </p>
+                     the trumpet for about a decade. I'm also part of the bands Administrative staff, I help manage the bands website
+                     which you can check out <a href="http://www.umass.edu/band/"> here</a>. Feel free to click on the image in the 
+                     navigation bar to check out my facebook page. If you want to learn a little more about myself check out the
+                     rest of this website. </p>
                 </div>
                 <div class="well">
                   <h2><b>About this site</b></h2>
                    <p style="line-height: 1.8;">I created this site using git hub pages and bootstrap. I have done multiple projects involving web programming
                    but it has been primarily work with javascript and database languages including postgresql and mongodb. This
                    site allows me to gain experience in the frontend side of web development. This website also allows me to show
-                   in great depth my experience with multiple programming languages which can be seen in the programming knowledge tab.
-                   (In progress)</p>
+                   in great depth my experience with multiple programming languages which can be seen in the programming knowledge tab 
+                   (in progress).</p>
                 </div>
                 <div class="well">
                   <h2><b>Contact me</b></h2>
-                   <p style="line-height: 1.8;">If there are any questions about myself or if someone is using this site to learn more about software development.
-                   Feel free to send me an email at mlydigsen@umass.edu.
+                   <p style="line-height: 1.8;">If there are any questions about myself feel free to send me an email at 
+                   mlydigsen@umass.edu. If you have any suggestions for the site feel free to contact me as well. I'm always looking
+                   for ways to make this site look better or have more content.
                    </p>
                 </div>
              </div>
