--- a/Projects.html
+++ b/Projects.html
@@ -86,9 +86,9 @@
           <!--<div class="container"> --> 
                 <!--<div class="well">-->
                   <h2 style="margin-left:10px;"><b>Downtime Capture System</b></h2>
-                   <p style="line-height: 1.8; margin-left:10px;">This was a Downtime Capture System, using a Raspberry pi, I created to measure when a factory machine stopped 
+                   <p style="line-height: 1.8; margin-left:10px;">I created a Downtime Capture System, using a Raspberry pi, to measure when a factory machine stopped 
                    functioning. It would index the time that the machine went down by receiving a signal from the machine. 
-                   Then a worker could use a GUI i created to record the reasons why the the machine went down. The reasons it could 
+                   Then a worker could use a GUI I created to record the reasons why the the machine went down. The reasons it could 
                    go down could be updated at any time from an excel spread sheet. Then once the event had been logged it would send
                    the data to a different excel spread sheet that could be downloaded and processed at any time.</p>
                 <!--</div>-->
@@ -110,9 +110,10 @@
            <div class="col-sm-4">       
               <h2 style="margin-left:10px;"><b>Mosaic Creator</b></h2>
                <p style="line-height: 1.8; margin-left:10px;">Using java, I created a function that makes image mosaics from a large number of smaller images. 
-               A product of the code can be seen in my profile picture. In the link <a href="https://github.com/mattncc1701/Image-Effects" target="_blank">
-               provided</a>, the code can also create blurring effects, sharpening effects, and contrast changes. The image of the mona
-               lisa provided shows what my program can do.</p>
+               A product of the code can be seen in my profile picture on my facebook page. In the link 
+               <a href="https://github.com/mattncc1701/Image-Effects" target="_blank">provided</a>, the code can also 
+               create blurring effects, sharpening effects, and contrast changes. The image of the mona
+               lisa provided is another example of what my program can do.</p>
            </div>
            
            <div class="col-sm-1"></div>
@@ -121,8 +122,8 @@
            <div class="col-sm-1"></div>
            <div class="col-sm-4">    
               <h2 style="margin-left:10px;"><b>Space Invaders Game</b></h2>
-               <p style="line-height: 1.8; margin-left:10px;">Using java, I recreated the old arcade game space invaders. In past summers I taught
-               a free java programming course using this program. Each week I would introduce new concepts about java and
+               <p style="line-height: 1.8; margin-left:10px;">Using java, I recreated the old arcade game space invaders. 
+               In past summers I taught a free java programming course using this program. Each week I would introduce new concepts about java and
                let high school kids who were taking this class fill in the code to this game. By the end of the class
                the students would have a firm knowledge of java and will have programmed much of the game Space Invaders. The image
                shown is a snap shot of my game. I'm in the process of converting my code into a java applet so you can play it on
@@ -146,9 +147,9 @@
            <div class="col-sm-1"></div>
            <div class="col-sm-4">   
               <h2 style="margin-left:10px;"><b>Plannit</b></h2>
-               <p style="line-height: 1.8; margin-left:10px;">This is a website me and group created for my web programming class. I was the team leader of a group of six people. 
+               <p style="line-height: 1.8; margin-left:10px;">This is a website I created for my web programming class. I was the team leader of a group of six people. 
                It is a customization planner app that is built using the mean stack which consists of Mongodb, Express, Angular, and Nodejs. The
-               image provided was our team logo that I created.</p>
+               image provided was our team logo that I created. You can visit my github page to check out the code.</p>
            </div>    
            <div class="col-sm-1"></div>
         </div>
@@ -157,7 +158,7 @@
            <div class="col-sm-1"></div>
            <div class="col-sm-4">       
               <h2 style="margin-left:10px;"><b>3D Carnival Game</b></h2>
-               <p style="line-height: 1.8; margin-left:10px;">Using OpenGL in Java, I created a 3D Carnival Games system consisting
+               <p style="line-height: 1.8; margin-left:10px;">Using OpenGL in java, I created 3D Carnival Games system consisting
                of three games Duck Shooter, Balloon popper, and water gun shooter. The image provded is a snap shot of
                the duck shooter game I created.</p>
            </div>
