--- a/Interests.html
+++ b/Interests.html
@@ -120,7 +120,7 @@
                so that I can learn about multiple disciplines. In addition, when I write a program for Graphics or Robotics I
                actually see the results. What I mean by this is that instead of just seeing some lines of text appear I see an 
                image I made appear or I see a robot move and do something spectacular because I programmed it to. An image like the
-               one below is a lot cooler than some simple text on a screen</p>
+               one below is a lot cooler than some simple text on a screen.</p>
                 <br>
                 <center>
                     <img src="images/teapots.jpg" class="img-responsive" width = "600">
