--- a/Current_Work.html
+++ b/Current_Work.html
@@ -84,12 +84,12 @@
                way to learn twitter bootstrap and explore all of the features it provides. I have gained much frontend experience
                in terms of web development thanks to this project. This site isn't solely to show off myself but to also share my
                knowledge of programming. There are plenty of tutorials for learning how to code but none that are quite as reachable
-               or comprehensive as I plan on making this wbe site. I hope that people will eventually look to my site for learning
-               about all sorts of new programming concepts that they may not have heard before. In addition to programming I hope
+               or comprehensive as I plan on making this website. I hope that people will eventually look to my site for learning
+               about all sorts of new programming concepts that they may not have heard before. In addition to programming, I hope
                to eventually add a section to share my level of math knowledge. I took a course on Abstract Algebra and it was
                one of the hardest math courses I have ever taken. Unfortuantely, the only reference I had was my book since there
-               were very few resources online. I hope to make a very in depth guide on the topic and make the subject more 
-               approachable. </p>
+               were very few resources online. I hope to make a very in depth guide on the topic and make more difficult 
+               math courses more approachable. </p>
             </div>
             <div class="well">
               <h2><b>Molecular Playground Expansion</b></h2>
