--- a/FIRST.html
+++ b/FIRST.html
@@ -101,7 +101,7 @@
                         </center>
                         <br>      
                          <p style="line-height: 1.8;">This video is of my FRC team back in 2013 at the Boston State Regional Finals. Our team
-                          one the regional that year as well as the Chairman's award. Since sophomore year of high school i have been
+                          won the regional that year as well as the Chairman's award. Since sophomore year of high school I have been
                           heavily involved in FIRST. FIRST allows high school students working along with adult mentors to build 120 
                            pound robots to accomplish challenges FIRST presents every year. The challenge in the video above is
                           shooting frisbees into goals and climbing the pyramids seen in the video. FIRST provides very challenging technical
@@ -117,7 +117,7 @@
                         <center>
                             <img src="images/tuberobot.JPG" class="img-responsive" width="600" height="500">
                             <br>
-                            <p> <font color="grey">This was our robot in 2011 that picked up tubes and had a minibot
+                            <p> <font color="grey">This was our robot in 2011 that picked up tubes and had a mini robot
                             onboard.</font></p>
                             <br>
                             <img src="images/basketballrobot.JPG" class="img-responsive" width="600" height="500">
@@ -155,8 +155,8 @@
                         <br>      
                          <p style="line-height: 1.8;">The above pictures shows me teaching high school students java.
                          We used java to operate our robot so it was crucial to teach it to those who wanted to learn how
-                         to operate the robot. In addition to teaching the students during the season I also created a 
-                         summer programming class that taught them java in more depth. You can read more about that in Porjects
+                         to operate the robot. In addition to teaching the students during the season, I also created a 
+                         summer programming class that taught them java in more depth. You can read more about that in the Projects
                          tab under Space Invaders.</p>
                          <br> 
                          <center>
@@ -166,7 +166,7 @@
                          <p style="line-height: 1.8;">The above pictures shows me with two middle school students. They were part
                          of FLL (FIRST Lego League) which is similar to FRC except instead of giant one hundred pound robots
                          these robots were made out of legos. The middle school students had to use Lego Mindstorm kits to construct
-                         a Lego robots to complete challenges that were controlled completely autonomously. I was a mentor helping
+                         Lego robots to complete challenges that were controlled completely autonomously. I was a mentor helping
                          these kids learn how to program and build the robot and enstilling in them the fundamentals of engineering.
                          We didn't do great in the competitions but we had a lot of fun and everyone learned a lot including myself.
                          </p>
